Add SGTL5000 support for fssmmx8mp
For the I2S_MCLK the CLKOUT1 is used, so this clock had to be added to
the current kernel version. In kernel version 6 from NXP, these are
already defined, so for the merge we should use the code from NXP.

--- a/arch/arm64/boot/dts/F+S/fssmmx8mp.dts
+++ b/arch/arm64/boot/dts/F+S/fssmmx8mp.dts
@@ -75,6 +75,7 @@
  * // TODO: detected but not work
  *  */
 #define CONFIG_FSSMMX8MP_I2S_A
+#define CONFIG_FSSMMX8MP_SGTL5000_AUDIO
 
 /* Camera on serial MIPI CSI interface */
 //#define CONFIG_FSSMMX8MP_CSI_A
