--- a/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
@@ -57,11 +57,6 @@
 #undef CONFIG_ARMSTONEMX8MP_UART_B_RTSCTS
 #endif
 
-#ifdef CONFIG_ARMSTONEMX8MP_SPI_B
-#undef CONFIG_ARMSTONEMX8MP_I2C_A
-#endif
-
-
 #if defined(CONFIG_ARMSTONEMX8MP_UART_D) || defined(CONFIG_ARMSTONEMX8MP_UART_D_RTSCTS) \
 	|| defined(CONFIG_ARMSTONEMX8MP_SPI_B) || defined(CONFIG_ARMSTONEMX8MP_I2C_C) \
 	|| defined(CONFIG_ARMSTONEMX8MP_UART_B) || defined(CONFIG_ARMSTONEMX8MP_UART_C)
@@ -89,6 +84,9 @@
 		sound-wm8904 = &sound_wm8904;
 		wm8960 = &wm8960;
 		wm8904 = &wm8904;
+#endif
+#ifdef CONFIG_ARMSTONEMX8MP_EEPROM
+		eeprom = &eeprom;
 #endif
 	};
 
@@ -674,9 +672,9 @@
 #endif /* CONFIG_ARMSTONEMX8MP_EXT_RTC */
 
 #ifdef CONFIG_ARMSTONEMX8MP_ADC
-	ads1015@48 {
+	ads1015@49 {
 		compatible = "ti,ads1015";
-		reg = <0x48>;
+		reg = <0x49>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 
@@ -888,6 +886,16 @@ touch: goodix@5d {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c4>;
 	status = "okay";
+
+#ifdef CONFIG_ARMSTONEMX8MP_EEPROM
+	/* EEPROM */
+
+	eeprom: eeprom@50 {
+		compatible = "atmel,24c02";
+		reg = <0x50>;
+		pagesize = <8>;
+	};
+#endif /* CONFIG_ARMSTONEMX8MP_EEPROM */
 };
 #endif /* CONFIG_ARMSTONEMX8MP_I2C_A */
 
@@ -1110,6 +1118,9 @@ touch: goodix@5d {
 	fsl,uart-has-rtscts;
 #endif
 	status = "okay";
+#ifdef CONFIG_ARMSTONEMX8MP_RS485
+	linux,rs485-enabled-at-boot-time;
+#endif
 };
 #endif /* CONFIG_ARMSTONEMX8MP_UART_B */
 
