--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -5,13 +5,15 @@ dtb-$(CONFIG_ARCH_MXC) += \
 		picocoremx8ulp.dtb \
 		picocoremx8ulp-adp-mipi2mipi1-ee0350et-2cp.dtb \
 		picocoremx8ulp-adp-mipi2lvds1-BT070L1060CS0I1AD-A.dtb
-		
-dtb-$(CONFIG_ARCH_MXC) += picocoremx93.dtb \
-			picocoremx93-j070wvtc0211.dtb \
-			picocoremx93-BT070L1060CS0I1AD-A.dtb \
-			picocoremx93-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
-			picocoremx93-adp-lvds2lvds2-EE1010B1T-1CP.dtb
 
-dtb-$(CONFIG_ARCH_MXC) += fs-osm-sf-mx93-adp-osm-bb.dtb \
-						fs-osm-sf-mx93-adp-osm-bb_BT070L1060CS0I1AD-A.dtb \
-						fs-osm-sf-mx93-fert2x.dtb
+dtb-$(CONFIG_ARCH_MXC) += \
+		picocoremx93.dtb \
+		picocoremx93-j070wvtc0211.dtb \
+		picocoremx93-BT070L1060CS0I1AD-A.dtb \
+		picocoremx93-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
+		picocoremx93-adp-lvds2lvds2-EE1010B1T-1CP.dtb
+
+dtb-$(CONFIG_ARCH_MXC) += \
+		fs-osm-sf-mx93-adp-osm-bb.dtb \
+		fs-osm-sf-mx93-adp-osm-bb_BT070L1060CS0I1AD-A.dtb \
+		fs-osm-sf-mx93-fert2x.dtb
