--- a/arch/arm64/configs/fsimx93_defconfig
+++ b/arch/arm64/configs/fsimx93_defconfig
@@ -218,6 +218,9 @@ CONFIG_BRCMSTB_GISB_ARB=y
 CONFIG_VEXPRESS_CONFIG=y
 CONFIG_FSL_MC_UAPI_SUPPORT=y
 CONFIG_ARM_SCMI_PROTOCOL=y
+CONFIG_ARM_SCMI_POWER_CONTROL=y
+CONFIG_IMX_SCMI_BBM_CONTROL=y
+CONFIG_IMX_SCMI_MISC_CONTROL=y
 CONFIG_ARM_SCPI_PROTOCOL=y
 CONFIG_EFI_CAPSULE_LOADER=y
 CONFIG_IMX_DSP=y
@@ -373,6 +376,7 @@ CONFIG_KEYBOARD_ADC=m
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KEYBOARD_RPMSG=y
 CONFIG_KEYBOARD_SNVS_PWRKEY=y
+CONFIG_INPUT_BBNSM_PWRKEY=y
 CONFIG_KEYBOARD_IMX_SC_KEY=y
 CONFIG_KEYBOARD_CROS_EC=y
 CONFIG_INPUT_TOUCHSCREEN=y
@@ -492,10 +496,12 @@ CONFIG_SENSORS_INA3221=m
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
 CONFIG_CPU_THERMAL=y
+CONFIG_DEVFREQ_THERMAL=y
 CONFIG_THERMAL_EMULATION=y
 CONFIG_IMX_SC_THERMAL=y
 CONFIG_IMX8MM_THERMAL=y
 CONFIG_DEVICE_THERMAL=y
+CONFIG_IMX91_THERMAL=y
 CONFIG_QORIQ_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_SL28CPLD_WATCHDOG=m
@@ -588,12 +594,14 @@ CONFIG_IMX_DPU_CORE=y
 CONFIG_IMX8MM_LCDIF_CORE=y
 CONFIG_IMX_LCDIFV3_CORE=y
 CONFIG_DRM=y
+CONFIG_DRM_I2C_CH7006=m
+CONFIG_DRM_I2C_SIL164=m
 CONFIG_DRM_I2C_NXP_TDA998X=m
 CONFIG_DRM_MALI_DISPLAY=m
-CONFIG_DRM_NOUVEAU=m
 CONFIG_DRM_PANEL_BOE_TV101WUM_NL6=m
-CONFIG_DRM_PANEL_LVDS=m
+CONFIG_DRM_PANEL_LVDS=y
 CONFIG_DRM_PANEL_SIMPLE=y
+CONFIG_DRM_PANEL_NEWVISION_NV3051D=y
 CONFIG_DRM_PANEL_MANTIX_MLAF057WE51=m
 CONFIG_DRM_PANEL_RAYDIUM_RM67191=y
 CONFIG_DRM_PANEL_RAYDIUM_RM68200=y
@@ -639,6 +647,7 @@ CONFIG_DRM_IMX93_PARALLEL_DISPLAY_FORMAT=y
 CONFIG_DRM_IMX_HDMI=y
 CONFIG_DRM_IMX_SEC_DSIM=y
 CONFIG_DRM_IMX_DCNANO=y
+CONFIG_DRM_IMX95_DPU=y
 CONFIG_DRM_IMX_DCSS=y
 CONFIG_DRM_IMX_CDNS_MHDP=y
 CONFIG_DRM_ETNAVIV=m
@@ -670,7 +679,6 @@ CONFIG_SND_SOC_FSL_EASRC=m
 CONFIG_SND_SOC_FSL_XCVR=m
 CONFIG_SND_SOC_FSL_RPMSG=m
 CONFIG_SND_IMX_SOC=m
-CONFIG_SND_SOC_IMX_SGTL5000=m
 CONFIG_SND_SOC_IMX_SPDIF=m
 CONFIG_SND_SOC_FSL_ASOC_CARD=m
 CONFIG_SND_SOC_IMX_AUDMIX=m
@@ -697,6 +705,7 @@ CONFIG_SND_SOC_MSM8916_WCD_ANALOG=m
 CONFIG_SND_SOC_MSM8916_WCD_DIGITAL=m
 CONFIG_SND_SOC_PCM3168A_I2C=m
 CONFIG_SND_SOC_RT5659=m
+CONFIG_SND_SOC_SGTL5000=m
 CONFIG_SND_SOC_SIMPLE_AMPLIFIER=m
 CONFIG_SND_SOC_SIMPLE_MUX=m
 CONFIG_SND_SOC_SPDIF=m
@@ -804,7 +813,6 @@ CONFIG_MMC_DW_HI3798CV200=y
 CONFIG_MMC_DW_K3=y
 CONFIG_MMC_MTK=y
 CONFIG_MMC_SDHCI_XENON=y
-CONFIG_MMC_SDHCI_AM654=y
 CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
 CONFIG_NEW_LEDS=y
@@ -909,7 +917,9 @@ CONFIG_CLK_IMX8MP=y
 CONFIG_CLK_IMX8MQ=y
 CONFIG_CLK_IMX8QXP=y
 CONFIG_CLK_IMX8ULP=y
+CONFIG_CLK_IMX91=y
 CONFIG_CLK_IMX93=y
+CONFIG_CLK_IMX95_BLK_CTL=y
 CONFIG_HWSPINLOCK=y
 CONFIG_ARM_MHU=y
 CONFIG_IMX_MBOX=y
@@ -974,6 +984,7 @@ CONFIG_PHY_MIXEL_LVDS=y
 CONFIG_PHY_MIXEL_LVDS_COMBO=y
 CONFIG_PHY_CADENCE_SALVO=y
 CONFIG_PHY_FSL_IMX8MP_LVDS=y
+CONFIG_PHY_FSL_IMX9_DPHY_RX=y
 CONFIG_PHY_FSL_IMX93_MIPI_DPHY=y
 CONFIG_PHY_MIXEL_MIPI_DPHY=y
 CONFIG_PHY_FSL_IMX8M_PCIE=y
@@ -1015,6 +1026,7 @@ CONFIG_BTRFS_FS_POSIX_ACL=y
 CONFIG_FANOTIFY=y
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_QUOTA=y
+CONFIG_AUTOFS_FS=y
 CONFIG_FUSE_FS=m
 CONFIG_CUSE=m
 CONFIG_OVERLAY_FS=m
