Add adc alias to armstonemx8mp.dts
Starting revision 1.10, the address of the adc chip on the armstonemx8mp
will be at 0x49 to avoid conflict with the security chip.

We need to set the adc i2c address from U-Boot, so we ad an alias in
device tree.

--- a/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
@@ -88,6 +88,9 @@
 #ifdef CONFIG_ARMSTONEMX8MP_EEPROM
 		eeprom = &eeprom;
 #endif
+#ifdef CONFIG_ARMSTONEMX8MP_ADC
+		adc = &adc;
+#endif
 	};
 
 	reserved-memory {
@@ -672,7 +675,7 @@
 #endif /* CONFIG_ARMSTONEMX8MP_EXT_RTC */
 
 #ifdef CONFIG_ARMSTONEMX8MP_ADC
-	ads1015@49 {
+	adc: ads1015@49 {
 		compatible = "ti,ads1015";
 		reg = <0x49>;
 		#address-cells = <1>;
