--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -66,3 +66,5 @@ dtb-$(CONFIG_ARCH_MXC) += fssmmx8mp.dtb \
 			  fssmmx8mp-lcdif-j070wvtc0211.dtb \
 			  fssmmx8mp-BT070L1060CS0I1AD-A.dtb \
 			  fssmmx8mp-EE1010B1T-1CP.dtb
+dtb-$(CONFIG_ARCH_MXC) += osm8mm.dtb \
+			  osm8mm-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb
