--- a/arch/arm64/configs/fsimx8mm_defconfig
+++ b/arch/arm64/configs/fsimx8mm_defconfig
@@ -273,6 +273,7 @@ CONFIG_SPI_FSL_QUADSPI=y
 CONFIG_SPI_NXP_FLEXSPI=y
 CONFIG_SPI_IMX=y
 CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_GPIO=y
 CONFIG_SPMI=y
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_IMX8MM=y
