Update version of PCoreBBDSI for fsimx8mm

--- a/arch/arm64/boot/dts/F+S/picocoremx8mmr2-lpddr4.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mmr2-lpddr4.dts
@@ -36,7 +36,10 @@
 /* USB */
 #define CONFIG_PICOCOREMX8MM_USB_OTG1
 #define CONFIG_PICOCOREMX8MM_USB_HOST
-//#define CONFIG_PICOCOREMX8MM_USB_OTG1_USBC
+#define CONFIG_PICOCOREMX8MM_USB_OTG1_USBC
+/* USB Type-C ALERT signal is available on J2_77 on BBDSI baseboard since
+   Revision 1.40. Otherwise use polling with ~100ms */
+#define CONFIG_PICOCOREMX8MM_USB_OTG1_USBC_ALERT
 
 /* PCIe */
 #define CONFIG_PICOCOREMX8MM_PCIE
@@ -150,6 +153,11 @@
 #undef CONFIG_PICOCOREMX8MM_SPI_A_CAN_CONVERTER
 #else
 #undef CONFIG_PICOCOREMX8MM_USB_OTG1_USBC
+#endif
+
+#if !defined(CONFIG_PICOCOREMX8MM_USB_OTG1_USB) \
+    || (CONFIG_PICOCOREBBDSI_BOARD_REVISION < 140)
+#undef CONFIG_PICOCOREMX8MM_USB_OTG1_USBC_ALERT
 #endif
 
 #include "picocoremx8mm.dtsi"
