arch:arm64:boot:dts:F+S: add GAL2 devicetree

--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -1,3 +1,5 @@
-DTC_FLAGS_fs-gal1 := -@
+DTC_FLAGS_fsgal1 := -@
+DTC_FLAGS_fsgal2 := -@
 
-dtb-$(CONFIG_ARCH_LAYERSCAPE) += fs-gal1.dtb
+dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsgal1.dtb
+dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsgal2.dtb
