--- a/arch/arm64/boot/dts/F+S/fsgal1.dts
+++ b/arch/arm64/boot/dts/F+S/fsgal1.dts
@@ -1,10 +1,17 @@
-// SPDX-License-Identifier: (GPL-2.0+ OR MIT)
+// SPDX-License-Identifier: GPL-2.0
 /*
- * F&S Elektronik Systeme GmbH device tree source
- *
- * Copyright 2022 F&S Elektronik Systeme GmbH
- *
- */
+* Copyright 2024 F&S Elektronik Systeme GmbH
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License version 2 as
+* published by the Free Software Foundation.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*/
+
 
 /dts-v1/;
 #include "../freescale/fsl-ls1028a.dtsi"
