Add F&S versions of lt9211 bgride and nv3051d panel drivers
There are new mainline drivers for the lt9211 bgride and nv3051d panel.
However the F&S versions offer different functionality, like the
mipi2rgb conversion with the lt9211 driver.
Use F&S versions until the mainline driver supports this too.

It may be possible to integrate the F&S nv3051d into the mainline
driver. This has still to be tested

--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -347,6 +347,15 @@ config DRM_PANEL_NEWVISION_NV3051D
 	  This driver supports the NV3051D based panel found on the Anbernic
 	  RG353P and RG353V.
 
+config DRM_PANEL_NEWVISION_NV3051D_FUS
+	tristate "NewVision NV3051D DSI panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  This driver supports NV3051D based panels with F&S boards.
+
+
 config DRM_PANEL_NEWVISION_NV3052C
 	tristate "NewVision NV3052C RGB/SPI panel"
 	depends on OF && SPI
