--- a/drivers/gpu/drm/bridge/Kconfig
+++ b/drivers/gpu/drm/bridge/Kconfig
@@ -117,6 +117,17 @@ config DRM_LONTIUM_LT9211
 	  chip.
 	  Please say Y if you have such hardware.
 
+config DRM_LONTIUM_LT9211_FUS
+	tristate "Lontium LT9211 F&S DSI2DPI bridge"
+	depends on OF
+	select DRM_PANEL_BRIDGE
+	select DRM_KMS_HELPER
+	select DRM_MIPI_DSI
+	select REGMAP_I2C
+	help
+	  F&S Driver for Lontium LT9211 DSI to DPI bridge chip.
+	  Please say Y if you have such hardware.
+
 config DRM_LONTIUM_LT9611
 	tristate "Lontium LT9611 DSI/HDMI bridge"
 	select SND_SOC_HDMI_CODEC if SND_SOC
@@ -428,17 +439,6 @@ config DRM_TI_TPD12S015
 	help
 	  Texas Instruments TPD12S015 HDMI level shifter and ESD protection
 	  driver.
-
-config DRM_LONTIUM_LT9211
-	tristate "Lontium LT9211 DSI/RGB bridge"
-	depends on OF
-	select DRM_PANEL_BRIDGE
-	select DRM_KMS_HELPER
-	select REGMAP_I2C
-	help
-	  Driver for Lontium LT9211 DSI to RGB bridge
-	  chip driver that converts DSI RGB TTL signals
-	  Please say Y if you have such hardware.
 
 source "drivers/gpu/drm/bridge/analogix/Kconfig"
 
