arm64:boot:dts:F+S:picocoremx93: add gpio_adp for BT070L1060CS0I1AD-A
The Display uses a LED-Driver for Backlight.
Add the gpio_adp node to support the LED-Driver

--- a/arch/arm64/boot/dts/F+S/picocoremx93-BT070L1060CS0I1AD-A.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx93-BT070L1060CS0I1AD-A.dts
@@ -1,10 +1,16 @@
+// SPDX-License-Identifier: GPL-2.0
 /*
- * Copyright (C) 2024 F&S Elektronik Systeme GmbH
- *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License version 2 as
- * published by the Free Software Foundation.
- */
+* Copyright 2024 F&S Elektronik Systeme GmbH
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License version 2 as
+* published by the Free Software Foundation.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*/
 
 //#define CONFIG_PICOCOREMX93_MIPI_DSI_LVDS
 /* touch reset */
@@ -17,7 +23,7 @@
 /* use power_supply parameter */
 #define CONFIG_IMX93_LVDS_PANEL_POWER_SUPPLY
 /* use reset_gpios parameter */
-//#define CONFIG_IMX93_LVDS_PANEL_RESET_GPIOS
+#define CONFIG_IMX93_LVDS_PANEL_RESET_GPIOS
 
 #define IMX93_TOUCH_I2C 				lpi2c8
 #define IMX93_TOUCH_INTERRUPT_GPIO_BANK 		gpio2
@@ -25,8 +31,8 @@
 
 #ifdef CONFIG_IMX93_TOUCH_RESET
 /* GPIO_J1_2 for Rev. 1.10 */
-#define IMX93_TOUCH_RESET_GPIO_BANK gpio2
-#define IMX93_TOUCH_RESET_GPIO_NUM  19
+#define IMX93_TOUCH_RESET_GPIO_BANK gpio_adp
+#define IMX93_TOUCH_RESET_GPIO_NUM  5
 #endif
 
 #ifdef CONFIG_IMX93_LVDS_PANEL_POWER_SUPPLY
@@ -34,9 +40,88 @@
 #endif
 
 #ifdef CONFIG_IMX93_LVDS_PANEL_RESET_GPIOS
-/* IMX93_LVDS_PANEL_RESET_GPIOS */
-#error configure IMX93_LVDS_PANEL_RESET_GPIO_BANK and IMX93_LVDS_PANEL_RESET_GPIO_NUM defines
+#define IMX93_LVDS_PANEL_RESET_GPIO_BANK gpio_adp
+#define IMX93_LVDS_PANEL_RESET_GPIO_NUM 3
 #endif
 
 #include "picocoremx93.dts"
+
+&backlight_ldb {
+    pwms = <&gpio_adp 1 5263157 1>;
+    brightness-levels = <0 1 5 10 18 28 41 56
+               73 92 113 137 163 192 222 255>;
+    default-brightness-level = <14>;
+    status = "okay";
+};
+
+&reg_bl_on {
+    gpio = <&gpio_adp 0 GPIO_ACTIVE_HIGH>;
+};
+
+&IMX93_TOUCH_I2C {
+    /* use board type specific nodes */
+    gpio_adp: pca9634@61 {
+		compatible = "nxp,pca9634";
+		reg = <0x61>;
+		vdd-supply = <&reg_vlcd>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		#pwm-cells = <3>;
+		#gpio-cells = <2>;
+		led@0 {
+			reg = <0>;
+			label = "BL_ON";
+			type = "GPIO";
+			default-on;		/* or: keep-value */
+			active-high;
+		};
+		led@1 {
+			reg = <1>;
+			label = "BL_PWM";
+			type = "PWM";
+			default-on;	     /* or: keep-value */
+			active-low;
+		};
+		led@2 {
+			reg = <2>;
+			label = "2-unused";
+			type = "LED";
+			active-low;
+		};
+		led@3 {
+			reg = <3>;
+			label = "MIPI_RST";
+			type = "GPIO";
+			active-low;
+			default-on;	     /* or: keep-value */
+		};
+		led@4 {
+			reg = <4>;
+			label = "4-unused";
+			type = "LED";
+			active-low;
+		};
+		led@5 {
+			reg = <5>;
+			label = "I2C_RST";
+			type = "GPIO";
+			active-high;
+			default-on;     /* or: keep-value */
+		};
+		led@6 {
+			reg = <6>;
+			label = "6-unused";
+			type = "LED";
+			active-low;
+		};
+		led@7 {
+			reg = <7>;
+			label = "TOUCH_ON";
+			type = "GPIO";
+			active-high;
+			default-on;
+		};
+	};
+};
+
 #include "displays/imx93-BT070L1060CS0I1AD-A.dtsi"
